# wxWidgetsDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMake/Toolchain/: Readme.txt
Src/: main.cpp
